--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +21,41 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="apple-touch-icon" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+    <!-- Primary Meta Tags -->
+    <title>Mitchell Stahl | Interactive Letter</title>
+    <meta name="title" content="Mitchell Stahl | Interactive Letter" />
+    <meta name="description" content="This "Interactive Letter" shows off my
+    React.js knowledge, Company knowledge, and drive for the Full Stack intern
+    position.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.hiremitchell.com" />
+    <meta property="og:title" content="Mitchell Stahl | Interactive Letter" />
+    <meta
+      property="og:description"
+      content="This Interactive Letter shows off
+    my React.js knowledge, Company knowledge, and drive for the Full Stack
+    intern position."
+    />
+    <meta property="og:image" content="./iCapitalLetter.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.hiremitchell.com" />
+    <meta
+      property="twitter:title"
+      content="Mitchell Stahl | Interactive Letter"
+    />
+    <meta
+      property="twitter:description"
+      content="This Interactive Letter
+    shows off my React.js knowledge, Company knowledge, and drive for the Full
+    Stack intern position."
+    />
+    <meta property="twitter:image" content="./iCapitalLetter.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
