--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,12 @@
     <!-- Primary Meta Tags -->
     <title>Mitchell Stahl | Interactive Letter</title>
     <meta name="title" content="Mitchell Stahl | Interactive Letter" />
-    <meta name="description" content="This "Interactive Letter" shows off my
+    <meta
+      name="description"
+      content="This Interactive Letter shows off my
     React.js knowledge, Company knowledge, and drive for the Full Stack intern
-    position.">
+    position."
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
